--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "lint-staged": {
     "*.{js,css,ts,tsx,jsx}": [
       "prettier --write",
-      "eslint cache --fix"
+      "eslint --fix"
     ]
   }
 }
