--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
+    "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.13.7",
+    "@mui/x-date-pickers": "^6.10.0",
+    "dayjs": "^1.11.9",
     "i18next": "^23.2.7",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
@@ -37,8 +40,7 @@
     "vite": "^4.3.9"
   },
   "lint-staged": {
-    "*.{js,css,ts,tsx,jsx}": [
-      "prettier --write",
+    "*.{js,ts,tsx,jsx}": [
       "eslint --fix"
     ]
   }
