--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.13.7",
     "@mui/x-date-pickers": "^6.10.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "i18next": "^23.2.7",
     "prettier": "^3.0.0",
