--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "react-router-dom": "^6.15.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   },
