--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-i18next": "^13.0.1"
   },
   "devDependencies": {
