--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@mui/x-date-pickers": "^6.10.0",
     "date-fns": "^2.30.0",
     "i18next": "^23.2.7",
-    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
@@ -37,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "prettier": "3.0.3",
     "react-router-dom": "^6.15.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
