--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.13.7",
     "@mui/x-date-pickers": "^6.10.0",
+    "@tanstack/react-query": "^5.8.9",
     "date-fns": "^2.30.0",
     "i18next": "^23.2.7",
     "react": "^18.2.0",
@@ -27,6 +28,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.8.9",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
