--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "prettier": "3.0.3",
     "react-router-dom": "^6.15.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^1.2.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx}": [
