--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.9",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
