--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
+    "jsdom": "^24.0.0",
     "lint-staged": "^13.2.3",
     "prettier": "3.0.3",
     "react-router-dom": "^6.15.0",
