--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -29,25 +31,30 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.9",
+    "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
+    "@testing-library/svelte": "^4.1.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^1.2.2",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "global-jsdom": "^24.0.0",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "lint-staged": "^13.2.3",
     "prettier": "3.0.3",
     "react-router-dom": "^6.15.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
+    "vite": "^5.0.12",
     "vitest": "^1.2.2"
   },
   "lint-staged": {
