--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "lint-staged": "^13.2.3",
+    "msw": "^2.1.6",
     "prettier": "3.0.3",
     "react-router-dom": "^6.15.0",
     "typescript": "^5.0.2",
