--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prettier": "3.0.3",
     "react-router-dom": "^6.15.0",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.17.5",
     "vite": "^5.0.12",
     "vitest": "^1.2.2"
   },
