--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
     "@testing-library/svelte": "^4.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
