ts config fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 
     "types": ["vitest/globals"]
   },
-  "include": ["src", "vitest.config.ts"],
+  "include": ["src", "vitest.config.ts", "vitest-setup.ts"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
