--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.9",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/svelte": "^4.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -46,7 +47,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "global-jsdom": "^24.0.0",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "lint-staged": "^13.2.3",
